--- a/config.toml
+++ b/config.toml
@@ -9,10 +9,9 @@ build_search_index = false
 
 theme = "juice"
 
-[markdown]
+[markdown.highlighting]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = true
 light_theme = "github-light"
 dark_theme = "github-dark"
 
