--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ compile_sass = true
 build_search_index = false
 
 theme = "juice"
+title = "LSC'26"
 
 [markdown]
 # Whether to do syntax highlighting
